samples/_failures_safe/1761160352_548b76_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_024a1c6a.c: In function ‘main’:
./samples/SAFE/__tmp_024a1c6a.c:182:5: error: expected expression at end of input
  182 |     if (!fgets(input, sizeof(input),
      |     ^~
./samples/SAFE/__tmp_024a1c6a.c:182:5: error: expected declaration or statement at end of input
